# anibot

./: .gitignore  Anibot Technical Writeup.html  README.md  UPDATED_PLAN.md  app.py  pyproject.toml
knowledge/: manifest.toml
scripts/: ingest_knowledge.py  run_app.ps1
src/anibot/: __init__.py  main.py
src/anibot/llm/: __init__.py  ollama.py  prompt.py  vertex.py
src/anibot/planning/: __init__.py  generator.py  localization.py  repository.py  schema.py
src/anibot/rag/: __init__.py  chunking.py  ingest.py  manifest.py  pdf_extract.py  retriever.py  store.py  vector.py
src/anibot/web/static/: styles.css
src/anibot/web/templates/: base.html  index.html  plan.html
tests/: test_knowledge.py  test_ollama.py  test_planning.py  test_vertex.py
