[project]
name = "anibot"
version = "0.1.0"
description = "Offline-first farming plan recommendation app for AniBot"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  # Temporary Vercel judging mode: Vertex AI client. Remove for fully offline-only builds.
  "google-cloud-aiplatform>=1.95.0",
  "google-genai>=1.0.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.0",
  "pydantic>=2.0.0",
  "python-multipart>=0.0.9",
  "pypdf>=4.0.0",
  "tomli>=2.0.0; python_version < '3.11'",
  "uvicorn>=0.27.0",
]

[project.optional-dependencies]
rag = [
  "chromadb>=0.5.0",
  "sentence-transformers>=2.7.0",
]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
anibot-ingest-knowledge = "anibot.rag.ingest:main"
anibot-farming-plan = "anibot.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.vercel.scripts]
build = "python scripts/ingest_knowledge.py"
